--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/inter": "^4.5.15",
+    "@mui/material": "^5.11.12",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
