--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,9 +13,12 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/inter": "^4.5.15",
     "@mui/material": "^5.11.12",
+    "@rainbow-me/rainbowkit": "^0.12.1",
+    "ethers": "5.7.2",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.12.1"
   },
   "devDependencies": {
     "@types/react": "18.0.28",
