--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,10 @@
   "devDependencies": {
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
     "eslint-config-custom": "workspace:*",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "tsconfig": "workspace:*",
     "typescript": "4.9.5"
   }
