--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,9 @@
 	url = https://github.com/foundry-rs/forge-std
 [submodule "lib/forge-std"]
 	branch = v1.5.1
+[submodule "apps/contracts/lib/permit2"]
+	path = apps/contracts/lib/permit2
+	url = https://github.com/Uniswap/permit2
+[submodule "apps/contracts/lib/openzeppelin-contracts"]
+	path = apps/contracts/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
