--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,9 +17,12 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.12.1"
+    "wagmi": "^0.12.1",
+    "@ethersproject/abi": "5.7.0",
+    "@ethersproject/providers": "5.7.2"
   },
   "devDependencies": {
+    "@typechain/ethers-v5": "^10.2.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
@@ -27,6 +30,7 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "tsconfig": "workspace:*",
+    "typechain": "^8.1.1",
     "typescript": "4.9.5"
   }
 }
