--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@fontsource/inter": "^4.5.15",
     "@rainbow-me/rainbowkit": "^0.12.1",
     "cryptocurrency-icons": "^0.18.1",
+    "ethereum-blockies-base64": "^1.0.2",
     "ethers": "5.7.2",
     "next": "13.2.4",
     "react": "18.2.0",
