--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,13 +13,16 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/inter": "^4.5.15",
     "@rainbow-me/rainbowkit": "^0.12.1",
+    "cryptocurrency-icons": "^0.18.1",
+    "ethereum-blockies-base64": "^1.0.2",
     "ethers": "5.7.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "wagmi": "^0.12.1",
     "@ethersproject/abi": "5.7.0",
-    "@ethersproject/providers": "5.7.2"
+    "@ethersproject/providers": "5.7.2",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.2.0",
