--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@ethersproject/providers": "5.7.2",
     "@fontsource/inter": "^4.5.15",
     "@rainbow-me/rainbowkit": "^0.12.1",
+    "@wagmi/core": "^0.10.1",
     "@untitled-ui/icons-react": "^0.1.1",
     "cryptocurrency-icons": "^0.18.1",
     "ethereum-blockies-base64": "^1.0.2",
