chore: add lodash

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,12 @@
     "@ethersproject/providers": "5.7.2",
     "@fontsource/inter": "^4.5.15",
     "@rainbow-me/rainbowkit": "^0.12.1",
-    "@wagmi/core": "^0.10.1",
     "@untitled-ui/icons-react": "^0.1.1",
+    "@wagmi/core": "^0.10.1",
     "cryptocurrency-icons": "^0.18.1",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "5.7.2",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.2.0",
+    "@types/lodash": "^4.14.191",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
